auth-api.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  type: NodePort
  selector:
    app: auth-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  selector:
    matchLabels:
      app: auth-api
  replicas: 1
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: samlangley/auth-api:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 5000
