web.yml
apiVersion: v1
kind: Service
metadata:
  name: web-platform
spec:
  type: NodePort
  selector:
    app: web-platform
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-platform
spec:
  selector:
    matchLabels:
      app: web-platform
  replicas: 1
  template:
    metadata:
      labels:
        app: web-platform
    spec:
      containers:
      - name: web-platform
        image: nginxdemos/hello
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
