ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
     - host: spotty.io
       http:
        paths:
          - path: /web(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: web-platform
                port:
                  number: 80
          - path: /music(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: music-api
                port:
                  number: 5000
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 5000
